[gd_scene load_steps=3 format=3 uid="uid://ctk2tgnw5mitq"]

[ext_resource type="Script" uid="uid://6q87ubttfl7s" path="res://Scenes/Shared/Elevator.gd" id="1_560oh"]
[ext_resource type="Texture2D" uid="uid://bse4t0jtoycej" path="res://Assets/Rooms/Elevator.png" id="2_ev6sc"]

[node name="Elevator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_560oh")

[node name="ElevatorPNG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.42, 0.42)
texture = ExtResource("2_ev6sc")

[node name="FloorDropdown" type="OptionButton" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 40.0

[node name="GoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 396.0
offset_right = 426.0
offset_bottom = 31.0
text = "Go"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 221.0
offset_right = 271.0
offset_bottom = 31.0
text = "Close"
